--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 .titulo-estilo1 {
     font-size: 2.5em;
     color: #1E90FF; /* Cor azul */
-    background-color: #E0F7FA; /* Fundo azul-claro */
+    background-color: #a2c4c9; /* Fundo azul-claro */
     padding: 15px 25px;
     border-radius: 10px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
@@ -32,8 +32,8 @@ body {
 /* Estilo para o Texto 1 */
 .texto-estilo1 {
     font-size: 1.2em;
-    color: #555; /* Cor cinza-escuro */
-    background-color: #E3F2FD; /* Fundo azul-claro */
+    color: #7dbaf3; /* Cor cinza-escuro */
+    background-color: #6490af; /* Fundo azul-claro */
     padding: 10px 20px;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -46,8 +46,8 @@ body {
 /* Estilo para o Texto 2 */
 .texto-estilo2 {
     font-size: 1.2em;
-    color: #333; /* Cor cinza-escuro */
-    background-color: #F1F8E9; /* Fundo verde-claro */
+    color: #5ec76c; /* Cor cinza-escuro */
+    background-color: #c8f09c; /* Fundo verde-claro */
     padding: 10px 20px;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -61,18 +61,18 @@ body {
 .titulo-estilo3 {
     font-size: 2.5em;
     color: #ad1eff; /* Cor azul */
-    background-color: #9a63ce7a; /* Fundo azul-claro */
+    background-color: #9a63ce7a; /* Fundo Roxo */
     padding: 15px 25px;
     border-radius: 10px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.479);
     margin-bottom: 20px;
 }
 
 /* Estilo para o Título 4 */
 .titulo-estilo4 {
     font-size: 2.5em;
-    color: #af4c82; /* Cor verde */
-    background-color: #c293c4af; /* Fundo verde-claro */
+    color: #ac4caf; /* Cor verde */
+    background-color: #c293c4af; /* Fundo Rosa */
     padding: 15px 25px;
     border-radius: 10px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
@@ -82,8 +82,8 @@ body {
 /* Estilo para o Texto 3 */
 .texto-estilo3 {
     font-size: 1.2em;
-    color: #555; /* Cor cinza-escuro */
-    background-color: #E3F2FD; /* Fundo azul-claro */
+    color: #81439e; /* Cor cinza-escuro */
+    background-color: #bc97da; /* Fundo azul-claro */
     padding: 10px 20px;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -96,8 +96,8 @@ body {
 /* Estilo para o Texto 4 */
 .texto-estilo4 {
     font-size: 1.2em;
-    color: #883b65; /* Cor cinza-escuro */
-    background-color: #f8e9f4; /* Fundo verde-claro */
+    color: #fcdced; /* Cor cinza-escuro */
+    background-color: #d494b8; /* Fundo verde-claro */
     padding: 10px 20px;
     border-radius: 5px;
     margin-bottom: 20px;
